website/websites/u64q/code/fibonacci.2.pyston.log

 Mon, 25 Jan 2021 21:23:21 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-2.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-2.pyston", line 10
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
